--- a/styles/index.css
+++ b/styles/index.css
@@ -1,19 +1,3 @@
-.nav-links {
-  display: flex;
-  list-style: none;
-  width: 50%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-}
-
-.nav-links li a {
-  color: white;
-  text-decoration: none;
-  font-size: 16px;
-}
-
 @media screen and (max-width: 600px) {
   *,
   *::after,
@@ -21,6 +5,10 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+  }
+
+  body {
+    font-family: "Open Sans", sans-serif;
   }
 
   h1,
@@ -35,7 +23,10 @@
   .navbar {
     display: flex;
     justify-content: space-between;
+    position: absolute;
+    width: 100%;
     flex-wrap: wrap;
+    z-index: 9999;
   }
 
   .logo {
@@ -54,6 +45,7 @@
     font-family: "Pacifico", cursive;
     font-weight: 100;
   }
+
   .line {
     width: 30px;
     height: 3px;
@@ -64,10 +56,26 @@
     position: relative;
   }
 
+  .nav-links {
+    display: flex;
+    list-style: none;
+    width: 50%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+  }
+
+  .nav-links li a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+  }
+
   .hamburger {
     position: absolute;
     cursor: pointer;
-    right: 6%;
+    right: 7%;
     top: 36%;
     transform: translate(-5%, -50%);
     z-index: 2;
@@ -79,7 +87,7 @@
     height: 100vh;
     width: 100%;
     flex-direction: column;
-    clip-path: circle(11% at 88% 3%);
+    clip-path: circle(11% at 88% 2%);
     -webkit-clip-path: circle(11% at 88% 3%);
     transition: all 1s ease-out;
     pointer-events: none;
@@ -94,7 +102,7 @@
     padding: 1em;
   }
   .nav-links li a {
-    font-size: 25px;
+    font-size: 22px;
   }
   .nav-links li:nth-child(1) {
     transition: all 0.5s ease 0.2s;
@@ -107,5 +115,66 @@
   }
   li.fade {
     opacity: 1;
+  }
+
+  .carousel-container {
+    overflow: hidden;
+    width: 100%;
+  }
+
+  .carousel-slide {
+    display: flex;
+    width: 100%;
+    height: 400px;
+  }
+
+  .carousel-slide img {
+    width: 100%;
+    max-height: 400px;
+
+    animation: ani 2s linear;
+  }
+
+  @keyframes ani {
+    0% {
+      opacity: 0.2;
+      transform: scale(1.2, 1.2);
+    }
+    20% {
+      opacity: 1;
+      transform: scale(1, 1);
+    }
+    80% {
+      opacity: 1;
+      transform: scale(1, 1);
+    }
+    95% {
+      opacity: 0.8;
+      transform: scale(1.2, 1.2);
+    }
+    100% {
+      opacity: 0.8;
+      transform: scale(1.2, 1.2);
+    }
+  }
+
+  #nextBtn {
+    font-size: 31px;
+    color: white;
+    border: none;
+    background: none;
+    top: 32%;
+    position: absolute;
+    right: 9%;
+  }
+
+  #prevBtn {
+    font-size: 31px;
+    color: white;
+    border: none;
+    background: none;
+    top: 32%;
+    position: absolute;
+    left: 9%;
   }
 }
