--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,17 @@
   h5 {
     padding: 0;
     margin: 0;
+    font-family: "Oxygen", sans-serif;
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+    letter-spacing: 1px;
+    line-height: 1.9;
+    color: #999;
+    font-family: "Open Sans", sans-serif;
   }
 
   .navbar {
@@ -165,7 +176,7 @@
     background: none;
     top: 32%;
     position: absolute;
-    right: 9%;
+    right: 4%;
   }
 
   #prevBtn {
@@ -175,6 +186,119 @@
     background: none;
     top: 32%;
     position: absolute;
-    left: 9%;
+    left: 4%;
+  }
+
+  .container {
+    position: absolute;
+    left: 2%;
+    top: 16%;
+    padding: 1em;
+    text-align: center;
+  }
+
+  .white-text {
+    color: white;
+  }
+
+  .container h3 {
+    font-size: 20px;
+  }
+
+  .light-text {
+    color: white;
+    padding-top: 2em;
+    font-size: 12px;
+  }
+
+  #videoBtn {
+    background: linear-gradient(to right, #ffc845, #fe3859);
+    padding: 12px 20px;
+    border: none;
+    color: white;
+    margin-top: 4em;
+    font-size: 11px;
+    cursor: pointer;
+    letter-spacing: 1px;
+    outline: none;
+    overflow: hidden;
+    border-radius: 100px;
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 9999999;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  .modal-content {
+    position: relative;
+    margin: auto;
+    padding: 0;
+    width: 80%;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+  }
+
+  @-webkit-keyframes animatetop {
+    from {
+      top: -300px;
+      opacity: 0;
+    }
+    to {
+      top: 0;
+      opacity: 1;
+    }
+  }
+
+  @keyframes animatetop {
+    from {
+      top: -300px;
+      opacity: 0;
+    }
+    to {
+      top: 0;
+      opacity: 1;
+    }
+  }
+
+  .modal-header {
+    display: flex;
+    background-color: #ffffff;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 1rem;
+    border-bottom: 1px solid #e9ecef;
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem;
+  }
+
+  .modal-title {
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: #fe3859;
+    text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.18);
+    font-family: "Pacifico", cursive;
+  }
+
+  #closeBtn {
+    background: none;
+    border: none;
+    font-size: 20px;
+    margin-top: 0.2em;
   }
 }
