--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,8 @@
     padding: 0;
     margin: 0;
     font-family: "Oxygen", sans-serif;
+    font-weight: 500;
+    line-height: 1.2;
   }
 
   p {
@@ -86,14 +88,14 @@
   .hamburger {
     position: absolute;
     cursor: pointer;
-    right: 7%;
-    top: 36%;
+    right: 6%;
+    top: 33%;
     transform: translate(-5%, -50%);
     z-index: 2;
   }
 
   .nav-links {
-    position: fixed;
+    position: absolute;
     background: linear-gradient(to right, #ffc845, #fe3859);
     height: 100vh;
     width: 100%;
@@ -107,6 +109,7 @@
     clip-path: circle(1000px at 90% -10%);
     -webkit-clip-path: circle(1000px at 90% -10%);
     pointer-events: all;
+    position: fixed;
   }
   .nav-links li {
     opacity: 0;
@@ -211,7 +214,7 @@
     font-size: 12px;
   }
 
-  #videoBtn {
+  .color-btn {
     background: linear-gradient(to right, #ffc845, #fe3859);
     padding: 12px 20px;
     border: none;
@@ -300,5 +303,63 @@
     border: none;
     font-size: 20px;
     margin-top: 0.2em;
+  }
+
+  .modal-body {
+    background-color: #ffffff;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+  }
+
+  .cakes-img {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    list-style: none;
+  }
+
+  .cake-box {
+    text-align: center;
+    background: #ffffff;
+    padding: 1em 1em;
+    margin: 0.5em 0.5em;
+    box-shadow: 0px 1px 10px 2px rgba(92, 92, 97, 0.09);
+  }
+
+  .last-box {
+    list-style: none;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .about-top-text {
+    padding: 1em;
+  }
+
+  .text-uppercase {
+    text-transform: uppercase;
+  }
+
+  .about-top-text h2 {
+    font-size: 23px;
+  }
+
+  .about-top-text h4 {
+    font-size: 15px;
+    margin-top: 1em;
+  }
+
+  .about-top-text p {
+    font-size: 12px;
+    margin-top: 1em;
+  }
+
+  .about-btn {
+    margin-top: 1em;
+  }
+
+  .about-img img {
+    width: 100%;
   }
 }
