--- a/styles/index.css
+++ b/styles/index.css
@@ -362,4 +362,50 @@
   .about-img img {
     width: 100%;
   }
+
+  .fa-utensils {
+    font-size: 4em;
+    transform: rotate(90deg);
+    background: -webkit-linear-gradient(to left, #ffc845, #fe3859);
+    background: -o-linear-gradient(to left, #ffc845, #fe3859);
+    background: -moz-linear-gradient(to left, #ffc845, #fe3859);
+    background: linear-gradient(to left, #ffc845, #fe3859);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .about-center-text {
+    text-align: center;
+  }
+
+  .about-center-text p {
+    font-size: 12px;
+  }
+
+  .about-center-text h4 {
+    font-size: 15px;
+    margin: 1em;
+    color: #636363;
+    line-height: 1.8;
+  }
+
+  .about-center-text h5 {
+    font-size: 16px;
+    margin-top: 1em;
+    color: #343a40 !important;
+    font-weight: 700;
+  }
+
+  .about-center-text span {
+    color: #6c757d !important;
+    font-weight: 400;
+  }
+
+  .cake-style {
+    position: absolute;
+    top: 263%;
+    z-index: -1;
+    left: 2px;
+    width: 36%;
+  }
 }
