--- a/styles/index.css
+++ b/styles/index.css
@@ -333,6 +333,10 @@
     flex-direction: column;
   }
 
+  .about {
+    padding-bottom: 7em;
+  }
+
   .about-top-text {
     padding: 1em;
   }
@@ -348,6 +352,8 @@
   .about-top-text h4 {
     font-size: 15px;
     margin-top: 1em;
+    color: #383838;
+    letter-spacing: 1px;
   }
 
   .about-top-text p {
@@ -403,9 +409,45 @@
 
   .cake-style {
     position: absolute;
-    top: 263%;
+    top: 240%;
     z-index: -1;
     left: 2px;
     width: 36%;
+  }
+
+  .services {
+    border-top: 1px solid #dee2e6 !important;
+    padding-top: 2em;
+    text-align: center;
+    background-color: #f8f9fa !important;
+  }
+
+  .support-grid {
+    padding: 1em;
+  }
+
+  .fa-heart,
+  .fa-birthday-cake,
+  .fa-calendar {
+    font-size: 45px;
+    color: #fe3859;
+    background: -webkit-linear-gradient(#ffc845, #fe3859);
+    background: -o-linear-gradient(#ffc845, #fe3859);
+    background: -moz-linear-gradient(#ffc845, #fe3859);
+    background: linear-gradient(#ffc845, #fe3859);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .support-grid h5 {
+    color: #343a40 !important;
+    font-size: 20px;
+    letter-spacing: 1px;
+    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.48);
+    padding: 1em;
+  }
+
+  .support-grid p {
+    font-size: 12px;
   }
 }
