--- a/styles/index.css
+++ b/styles/index.css
@@ -409,7 +409,8 @@
 
   .cake-style {
     position: absolute;
-    top: 47%;
+    width: 38%;
+    bottom: 0;
     z-index: -1;
     left: 2px;
     width: 36%;
@@ -501,7 +502,7 @@
   }
 
   .featured-section{
-    padding: 3em 0;
+    padding-top: 3em;
   }
 
   .title-text{
@@ -520,7 +521,7 @@
 
   .galleryContainer{
     width: 100%;
-    height: 500px;
+    height: 370px;
     max-width: 1000px;
     margin: auto;
     user-select: none;
@@ -566,7 +567,7 @@
     left: 0;
     z-index: 1;
     height: 72px;
-    top: 42%;
+    top: 50%;
     transform: translateY(-50%);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -647,6 +648,52 @@
 @keyframes moveRightPrev {
     from {margin-left: -100%;opacity: 1;}
     to {margin-left: 0%;opacity: 1;}
+}
+
+.news{
+  background-color: #FDF5E7;
+  padding:2.5em 1em;
+}
+
+.order{
+  padding: 2em 1.5em;
+  box-shadow: 0px 2px 12px 2px rgba(0, 0, 0, 0.14);
+}
+
+.order-text h3{
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.order-text p{
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.form-group{
+  padding-bottom: 1em;
+}
+
+.form-group select{
+  margin-top: 10px;
+  font-size: 15px;
+  letter-spacing: 1px;
+  background: transparent;
+  padding: 11px 10px;
+  width: 100%;
+  color: #3c3b3b;
+}
+
+.order-btn{
+  width: 100%;
+  color: #fff;
+  background: #fe3859;
+  border: none;
+  padding: 11px 0;
+  letter-spacing: 1px;
+  margin-top: 1em;
+  font-size: 17px;
+  border-radius: 0.25rem;
 }
 
 }
